--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "phosphor-react-native": "^1.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.4.0",
     "react-native": "0.68.2",
+    "react-native-svg": "^12.3.0",
     "react-native-web": "0.17.7",
     "styled-components": "^5.3.5"
   },
